--- a/examples/7guis-flight-booker-react/src/styles/reset.css
+++ b/examples/7guis-flight-booker-react/src/styles/reset.css
@@ -128,6 +128,10 @@ table {
   border-spacing: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
