run prettier on all files

--- a/examples/trivia-game-example/src/styles/global.scss
+++ b/examples/trivia-game-example/src/styles/global.scss
@@ -1,20 +1,20 @@
-@import url("https://fonts.googleapis.com/css?family=Shadows+Into+Light");
-@import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
+@import '~bootstrap/scss/bootstrap';
 
 .trivia {
-  font-family: "Shadows Into Light", cursive;
+  font-family: 'Shadows Into Light', cursive;
   font-size: 120px;
   text-align: center;
 }
 
 .small-trivia {
-  font-family: "Shadows Into Light", cursive;
+  font-family: 'Shadows Into Light', cursive;
   font-size: 60px;
   text-align: center;
 }
 
 body {
-  font-family: "Shadows Into Light", cursive;
+  font-family: 'Shadows Into Light', cursive;
 }
 
 .list-group-item {
